# IARCS-internship

./: .gitignore  Brief for Interns-Full.docx  Project Briefing.pptx  README.md  outcome3.txt
code/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt  supervised.ipynb  train-with-keywords.ipynb
code/data/: mitre-classified.xlsx  raw_capec_data.xlsx
code/src/: BERT_engine.py  NB_Randomforest_engine.py  SMNN_engine.py  back_translation_engine.py  engine.py  hyperparm.py  model.py  ovr_engine.py  test.ipynb  train_engine.py  train_model.ipynb
code/src/examples/: translation.py
code/src/models/: NB_Randomforest_model.py  SMNN.py  ovr_model.py
code/src/modules/: extract_keywords.py  preprocessing.py  translate.py  visualise.py
e-journals/journal1/: outcome1.txt  outcome2.txt
e-journals/journal2/: outcome1.txt  outcome2.txt  outcome3.txt
report/: journal.docx  main.tex
report/chapters/: appendix.tex  references.tex  week1.tex  week10.tex  week2.tex  week3.tex  week4.tex  week5.tex  week6.tex  week7.tex  week8.tex  week9.tex
