[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
tensorflow = "^2.15.0.post1"
gensim = "^4.3.2"
tqdm = "^4.66.2"
regex = "^2023.12.25"
nltk = "^3.8.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
transformers = "^4.38.2"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
